[package]
name = "grarr"
version = "0.0.3"
authors = ["Wim Looman <wim@nemo157.com>"]
build = "build.rs"

[features]
# "maybe_cache" enables "cache" when building in release profile
default = ["clippy", "maybe_cache"]
cache = ["maybe_cache"]
maybe_cache = []

[dependencies]

git-appraise = "0.1.1"
git2 = "0.4.2"

hyper = "*"
iron = "*"
router = { git = "https://github.com/Nemo157/router", rev = "reverse_priority" }
logger = { git = "https://github.com/Nemo157/logger", rev = "allow-no-status" }
typemap = "*"
mime = "0.1.3"
lru_time_cache = "*"
time = "*"
walkdir = "*"
params = "*"

chrono = "*"
pulldown-cmark = "0.0.7"
maud-pulldown-cmark = "0.1.0"
gravatar = "0.1.4"

maud = "0.8.0"
maud_macros = "0.8.0"

clippy = { version = "=0.0.48", optional = true }
rust-crypto = "*"
unicase = "*"
toml = "0.1.27"
rustc-serialize = "0.3"
