[package]
name = "grarr"
version = "0.0.3"
authors = ["Wim Looman <wim@nemo157.com>"]
build = "build.rs"

[features]
# "maybe_cache" enables "cache" when building in release profile
default = ["clippy", "maybe_cache"]
cache = ["maybe_cache"]
maybe_cache = []

[dependencies]

git-appraise = "*"
git2 = "*"

hyper = "0.8.1"
iron = "*"
router = { git = "https://github.com/Nemo157/router", rev = "reverse_priority" }
logger = { git = "https://github.com/Nemo157/logger", rev = "personal_release" }
typemap = "*"
mime = "*"
lru_time_cache = "*"
time = "*"
walkdir = "*"
# params = "*"

chrono = "*"
pulldown-cmark = "*"
maud-pulldown-cmark = "*"
gravatar = "*"

maud = "*"
maud_macros = "*"

clippy = { version = "*", optional = true }
rust-crypto = "*"
unicase = "*"
toml = "*"
rustc-serialize = "*"
